[package]
name = "rustservertest"
version = "0.1.0"
authors = ["Jonas Jerndin <jonas@queenslab.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros", "rt-threaded"] }
warp = "0.2"